cmake_minimum_required(VERSION 3.24)
project(leetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(2492.minimum-score-of-a-path-between-two-cities-union-find contest/contest322/2492.minimum-score-of-a-path-between-two-cities-union-find.cpp)
add_executable(blind75/graph/684.redundant-connection.cpp)